--- a/mainWindow.html
+++ b/mainWindow.html
@@ -67,14 +67,22 @@
     var connection = mysql.createConnection({
       host: 'localhost',
       user: 'root',
-      password: '',
+      password: ''
       // database: 'the_app_database'
     });
 
     connection.connect(function (err) {
       if (err) throw err
-      console.log('You are now connected...')
+      console.log('You are now connected...');
+    //   console.log({
+    // host            : process.env.MYSQL_HOST,
+    // user            : process.env.MYSQL_USER,
+    // password        : process.env.MYSQL_SECRET
+    // // database        : process.env.MYSQL_DB
+    // });
     });
+
+    
   </script>
 
   <!-- <script type="text/javascript" src="core/libs/js/popper.min.js"></script> -->
