menuleft added company

--- a/app_modules/menus/menuleft.html
+++ b/app_modules/menus/menuleft.html
@@ -10,9 +10,10 @@
     <button type="button" class="btn btn-info btn-block menu-button" id="addNew" value="preview_invoice">Add New</button>
     <button type="button" class="btn btn-info btn-block menu-button" id="all">All</button>
     <button type="button" class="btn btn-info btn-block menu-button">Staff</button>
-    <button type="button" class="btn btn-info btn-block menu-button">Customer</button>
-    <button type="button" class="btn btn-info btn-block menu-button">Supplier</button>
     <button type="button" class="btn btn-info btn-block menu-button">Marketer</button>
+    <button type="button" class="btn btn-info btn-block menu-button">Supplier</button>
+    <button type="button" class="btn btn-info btn-block menu-button">Customer</button>
+    <button type="button" class="btn btn-info btn-block menu-button">Company</button>    
     <button type="button" class="btn btn-info btn-block menu-button">Unknown</button>
 
   </div>
