--- a/app_modules/menus/menuleft.html
+++ b/app_modules/menus/menuleft.html
@@ -22,11 +22,8 @@
 
   <div id="menuBtnGroup_invoice" class="collapse">
     <button type="button" class="btn btn-info btn-block menu-button">Create</button>
-    <button type="button" class="btn btn-info btn-block menu-button">By Date</button>
-    <button type="button" class="btn btn-info btn-block menu-button">By Month</button>
-    <button type="button" class="btn btn-info btn-block menu-button">By Year</button>
-    <button type="button" class="btn btn-info btn-block menu-button">By Customer</button>
-    <button type="button" class="btn btn-info btn-block menu-button">By Staff</button>
+    <button type="button" class="btn btn-info btn-block menu-button">Last Created</button>
+    <button type="button" class="btn btn-info btn-block menu-button">Last Checked</button>
     <button type="button" class="btn btn-info btn-block menu-button">All</button>
   </div>
 
